--- a/tp1.ipynb
+++ b/tp1.ipynb
@@ -230,19 +230,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
+   "outputs": [],
+   "source": [
+    "trend = np.arange(1, T + 1)\n",
+    "ones = np.ones(T)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([1, 2, 3, 4, 5])"
+      "text/plain": "array([[1.00000e+00, 1.00000e+00, 1.00000e+00],\n       [1.00000e+00, 2.00000e+00, 4.00000e+00],\n       [1.00000e+00, 3.00000e+00, 9.00000e+00],\n       ...,\n       [1.00000e+00, 5.62000e+02, 3.15844e+05],\n       [1.00000e+00, 5.63000e+02, 3.16969e+05],\n       [1.00000e+00, 5.64000e+02, 3.18096e+05]])"
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "trend = np.arange(1, T + 1)"
+    "X = np.column_stack((ones, trend, trend ** 2))\n",
+    "X"
    ],
    "metadata": {
     "collapsed": false
@@ -250,45 +263,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "outputs": [],
-   "source": [],
+   "source": [
+    "Y = df[\"log_100_USDCAD\"].values"
+   ],
    "metadata": {
     "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "outputs": [],
-   "source": [],
+   "source": [
+    "B = np.linalg.inv(X.T @ X) @ X.T @ Y"
+   ],
    "metadata": {
     "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 25,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([ 4.90909695e+00,  7.33070085e-04, -3.06987062e-06])"
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B"
+   ],
    "metadata": {
     "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "source": [
+    "residuals_deter = Y - X @ B"
+   ],
    "metadata": {
     "collapsed": false
    }
