--- a/tp1.ipynb
+++ b/tp1.ipynb
@@ -53,7 +53,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "[<matplotlib.lines.Line2D at 0x130665110>]"
+      "text/plain": "[<matplotlib.lines.Line2D at 0x1292a09d0>]"
      },
      "execution_count": 4,
      "metadata": {},
@@ -522,7 +522,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
+   "outputs": [],
+   "source": [
+    "def check_stationnarity(arma_model: ARIMAResultsWrapper) -> bool:\n",
+    "    arroots = arma_model.arroots\n",
+    "    return np.all(np.sqrt(arroots.real + arroots.imag) < 1)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "outputs": [],
    "source": [
     "order_list = [([1], 0, [0]),\n",
@@ -540,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "outputs": [
     {
      "name": "stdout",
@@ -553,7 +566,7 @@
       "Dep. Variable:           stoch_USDCAD   No. Observations:                  563\n",
       "Model:                 ARIMA(1, 0, 0)   Log Likelihood                -919.472\n",
       "Date:                Sun, 12 Feb 2023   AIC                           1844.945\n",
-      "Time:                        12:58:00   BIC                           1857.945\n",
+      "Time:                        13:55:11   BIC                           1857.945\n",
       "Sample:                             0   HQIC                          1850.020\n",
       "                                - 563                                         \n",
       "Covariance Type:                  opg                                         \n",
@@ -579,7 +592,7 @@
       "Dep. Variable:           stoch_USDCAD   No. Observations:                  563\n",
       "Model:                 ARIMA(2, 0, 0)   Log Likelihood                -898.321\n",
       "Date:                Sun, 12 Feb 2023   AIC                           1804.642\n",
-      "Time:                        12:58:01   BIC                           1821.976\n",
+      "Time:                        13:55:11   BIC                           1821.976\n",
       "Sample:                             0   HQIC                          1811.409\n",
       "                                - 563                                         \n",
       "Covariance Type:                  opg                                         \n",
@@ -606,7 +619,7 @@
       "Dep. Variable:           stoch_USDCAD   No. Observations:                  563\n",
       "Model:                 ARIMA(3, 0, 0)   Log Likelihood                -894.764\n",
       "Date:                Sun, 12 Feb 2023   AIC                           1799.528\n",
-      "Time:                        12:58:01   BIC                           1821.194\n",
+      "Time:                        13:55:11   BIC                           1821.194\n",
       "Sample:                             0   HQIC                          1807.986\n",
       "                                - 563                                         \n",
       "Covariance Type:                  opg                                         \n",
@@ -634,7 +647,7 @@
       "Dep. Variable:           stoch_USDCAD   No. Observations:                  563\n",
       "Model:                 ARIMA(4, 0, 0)   Log Likelihood                -891.030\n",
       "Date:                Sun, 12 Feb 2023   AIC                           1794.060\n",
-      "Time:                        12:58:01   BIC                           1820.060\n",
+      "Time:                        13:55:12   BIC                           1820.060\n",
       "Sample:                             0   HQIC                          1804.210\n",
       "                                - 563                                         \n",
       "Covariance Type:                  opg                                         \n",
@@ -663,7 +676,7 @@
       "Dep. Variable:           stoch_USDCAD   No. Observations:                  563\n",
       "Model:                 ARIMA(1, 0, 1)   Log Likelihood                -906.890\n",
       "Date:                Sun, 12 Feb 2023   AIC                           1821.779\n",
-      "Time:                        12:58:01   BIC                           1839.113\n",
+      "Time:                        13:55:12   BIC                           1839.113\n",
       "Sample:                             0   HQIC                          1828.546\n",
       "                                - 563                                         \n",
       "Covariance Type:                  opg                                         \n",
@@ -690,7 +703,7 @@
       "Dep. Variable:           stoch_USDCAD   No. Observations:                  563\n",
       "Model:                 ARIMA(2, 0, 2)   Log Likelihood                -892.400\n",
       "Date:                Sun, 12 Feb 2023   AIC                           1796.799\n",
-      "Time:                        12:58:01   BIC                           1822.799\n",
+      "Time:                        13:55:12   BIC                           1822.799\n",
       "Sample:                             0   HQIC                          1806.949\n",
       "                                - 563                                         \n",
       "Covariance Type:                  opg                                         \n",
@@ -719,7 +732,7 @@
       "Dep. Variable:           stoch_USDCAD   No. Observations:                  563\n",
       "Model:                 ARIMA(3, 0, 3)   Log Likelihood                -891.399\n",
       "Date:                Sun, 12 Feb 2023   AIC                           1798.798\n",
-      "Time:                        12:58:02   BIC                           1833.464\n",
+      "Time:                        13:55:13   BIC                           1833.464\n",
       "Sample:                             0   HQIC                          1812.331\n",
       "                                - 563                                         \n",
       "Covariance Type:                  opg                                         \n",
@@ -750,7 +763,7 @@
       "Dep. Variable:           stoch_USDCAD   No. Observations:                  563\n",
       "Model:                 ARIMA(4, 0, 4)   Log Likelihood                -890.159\n",
       "Date:                Sun, 12 Feb 2023   AIC                           1800.319\n",
-      "Time:                        12:58:04   BIC                           1843.652\n",
+      "Time:                        13:55:15   BIC                           1843.652\n",
       "Sample:                             0   HQIC                          1817.235\n",
       "                                - 563                                         \n",
       "Covariance Type:                  opg                                         \n",
@@ -798,20 +811,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "<class 'statsmodels.iolib.summary.Summary'>\n\"\"\"\n                               SARIMAX Results                                \n==============================================================================\nDep. Variable:           stoch_USDCAD   No. Observations:                  563\nModel:                 ARIMA(4, 0, 4)   Log Likelihood                -890.159\nDate:                Sun, 12 Feb 2023   AIC                           1800.319\nTime:                        12:58:04   BIC                           1843.652\nSample:                             0   HQIC                          1817.235\n                                - 563                                         \nCovariance Type:                  opg                                         \n==============================================================================\n                 coef    std err          z      P>|z|      [0.025      0.975]\n------------------------------------------------------------------------------\nconst         -0.0121      0.107     -0.113      0.910      -0.221       0.197\nar.L1          0.8819      0.078     11.250      0.000       0.728       1.036\nar.L2         -0.2548      0.096     -2.641      0.008      -0.444      -0.066\nar.L3         -0.7133      0.104     -6.832      0.000      -0.918      -0.509\nar.L4          0.4104      0.079      5.225      0.000       0.256       0.564\nma.L1         -0.5901      0.085     -6.903      0.000      -0.758      -0.423\nma.L2          0.3577      0.094      3.805      0.000       0.173       0.542\nma.L3          0.5143      0.105      4.896      0.000       0.308       0.720\nma.L4          0.0307      0.090      0.343      0.732      -0.145       0.206\nsigma2         1.3806      0.047     29.577      0.000       1.289       1.472\n===================================================================================\nLjung-Box (L1) (Q):                   0.01   Jarque-Bera (JB):              3187.41\nProb(Q):                              0.91   Prob(JB):                         0.00\nHeteroskedasticity (H):               4.50   Skew:                             1.25\nProb(H) (two-sided):                  0.00   Kurtosis:                        14.39\n===================================================================================\n\nWarnings:\n[1] Covariance matrix calculated using the outer product of gradients (complex-step).\n\"\"\"",
-      "text/html": "<table class=\"simpletable\">\n<caption>SARIMAX Results</caption>\n<tr>\n  <th>Dep. Variable:</th>     <td>stoch_USDCAD</td>   <th>  No. Observations:  </th>    <td>563</td>  \n</tr>\n<tr>\n  <th>Model:</th>            <td>ARIMA(4, 0, 4)</td>  <th>  Log Likelihood     </th> <td>-890.159</td>\n</tr>\n<tr>\n  <th>Date:</th>            <td>Sun, 12 Feb 2023</td> <th>  AIC                </th> <td>1800.319</td>\n</tr>\n<tr>\n  <th>Time:</th>                <td>12:58:04</td>     <th>  BIC                </th> <td>1843.652</td>\n</tr>\n<tr>\n  <th>Sample:</th>                  <td>0</td>        <th>  HQIC               </th> <td>1817.235</td>\n</tr>\n<tr>\n  <th></th>                      <td> - 563</td>      <th>                     </th>     <td> </td>   \n</tr>\n<tr>\n  <th>Covariance Type:</th>        <td>opg</td>       <th>                     </th>     <td> </td>   \n</tr>\n</table>\n<table class=\"simpletable\">\n<tr>\n     <td></td>       <th>coef</th>     <th>std err</th>      <th>z</th>      <th>P>|z|</th>  <th>[0.025</th>    <th>0.975]</th>  \n</tr>\n<tr>\n  <th>const</th>  <td>   -0.0121</td> <td>    0.107</td> <td>   -0.113</td> <td> 0.910</td> <td>   -0.221</td> <td>    0.197</td>\n</tr>\n<tr>\n  <th>ar.L1</th>  <td>    0.8819</td> <td>    0.078</td> <td>   11.250</td> <td> 0.000</td> <td>    0.728</td> <td>    1.036</td>\n</tr>\n<tr>\n  <th>ar.L2</th>  <td>   -0.2548</td> <td>    0.096</td> <td>   -2.641</td> <td> 0.008</td> <td>   -0.444</td> <td>   -0.066</td>\n</tr>\n<tr>\n  <th>ar.L3</th>  <td>   -0.7133</td> <td>    0.104</td> <td>   -6.832</td> <td> 0.000</td> <td>   -0.918</td> <td>   -0.509</td>\n</tr>\n<tr>\n  <th>ar.L4</th>  <td>    0.4104</td> <td>    0.079</td> <td>    5.225</td> <td> 0.000</td> <td>    0.256</td> <td>    0.564</td>\n</tr>\n<tr>\n  <th>ma.L1</th>  <td>   -0.5901</td> <td>    0.085</td> <td>   -6.903</td> <td> 0.000</td> <td>   -0.758</td> <td>   -0.423</td>\n</tr>\n<tr>\n  <th>ma.L2</th>  <td>    0.3577</td> <td>    0.094</td> <td>    3.805</td> <td> 0.000</td> <td>    0.173</td> <td>    0.542</td>\n</tr>\n<tr>\n  <th>ma.L3</th>  <td>    0.5143</td> <td>    0.105</td> <td>    4.896</td> <td> 0.000</td> <td>    0.308</td> <td>    0.720</td>\n</tr>\n<tr>\n  <th>ma.L4</th>  <td>    0.0307</td> <td>    0.090</td> <td>    0.343</td> <td> 0.732</td> <td>   -0.145</td> <td>    0.206</td>\n</tr>\n<tr>\n  <th>sigma2</th> <td>    1.3806</td> <td>    0.047</td> <td>   29.577</td> <td> 0.000</td> <td>    1.289</td> <td>    1.472</td>\n</tr>\n</table>\n<table class=\"simpletable\">\n<tr>\n  <th>Ljung-Box (L1) (Q):</th>     <td>0.01</td> <th>  Jarque-Bera (JB):  </th> <td>3187.41</td>\n</tr>\n<tr>\n  <th>Prob(Q):</th>                <td>0.91</td> <th>  Prob(JB):          </th>  <td>0.00</td>  \n</tr>\n<tr>\n  <th>Heteroskedasticity (H):</th> <td>4.50</td> <th>  Skew:              </th>  <td>1.25</td>  \n</tr>\n<tr>\n  <th>Prob(H) (two-sided):</th>    <td>0.00</td> <th>  Kurtosis:          </th>  <td>14.39</td> \n</tr>\n</table><br/><br/>Warnings:<br/>[1] Covariance matrix calculated using the outer product of gradients (complex-step)."
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 28,
+   "outputs": [],
    "source": [
-    "arma_models[\"ARMA(4,4)\"].summary()\n"
+    "def compute_lr_statistic(reduced_ll: float, full_ll: float) -> float:\n",
+    "    return -2 * (reduced_ll - full_ll)"
    ],
    "metadata": {
     "collapsed": false
@@ -819,7 +823,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
+   "outputs": [],
+   "source": [
+    "def compute_p_value_llr(reduced_ll: float, full_ll: float, df: int = 1) -> float:\n",
+    "    lr_statistic = compute_lr_statistic(reduced_ll, full_ll)\n",
+    "    p_val = sp.stats.chi2.sf(lr_statistic, df=df)\n",
+    "    return p_val"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([-1.27044227-0.j        ,  0.58783978-0.83721156j,\n        0.58783978+0.83721156j,  1.83290223-0.j        ])"
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arma_models[\"ARMA(4,4)\"].arroots\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "- H0: Le modèle complet ARMA(4,4) fit les données aussi bien que le modèle réduit ARMA(3,3). Par conséquent, on devrait choisir le modèle ARMA(3,3) car il est plus simple.\n",
+    "- H1: Le modèle complet ARMA(4,4) fit mieux les données que le modèle réduit ARMA(3,3). Par conséquent, on devrait choisir le modèle ARMA(4,4) car il est plus précis.\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.28949106543462216"
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compute_p_value_llr(arma_models[\"ARMA(3,3)\"].llf,\n",
+    "                    arma_models[\"ARMA(4,4)\"].llf,\n",
+    "                    df=2)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1.27044227-0.j          0.58783978-0.83721156j  0.58783978+0.83721156j\n",
+      "  1.83290223-0.j        ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arma_models[\"ARMA(4,4)\"].arroots)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "outputs": [],
    "source": [],
    "metadata": {
