--- a/tp1.ipynb
+++ b/tp1.ipynb
@@ -53,7 +53,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "[<matplotlib.lines.Line2D at 0x1292a09d0>]"
+      "text/plain": "[<matplotlib.lines.Line2D at 0x1239e4910>]"
      },
      "execution_count": 4,
      "metadata": {},
@@ -522,10 +522,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "outputs": [],
    "source": [
-    "def check_stationnarity(arma_model: ARIMAResultsWrapper) -> bool:\n",
+    "def check_stationarity(arma_model: ARIMAResultsWrapper) -> bool:\n",
     "    arroots = arma_model.arroots\n",
     "    return np.all(np.sqrt(arroots.real + arroots.imag) < 1)"
    ],
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "outputs": [],
    "source": [
     "order_list = [([1], 0, [0]),\n",
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "outputs": [
     {
      "name": "stdout",
@@ -566,7 +566,7 @@
       "Dep. Variable:           stoch_USDCAD   No. Observations:                  563\n",
       "Model:                 ARIMA(1, 0, 0)   Log Likelihood                -919.472\n",
       "Date:                Sun, 12 Feb 2023   AIC                           1844.945\n",
-      "Time:                        13:55:11   BIC                           1857.945\n",
+      "Time:                        15:59:41   BIC                           1857.945\n",
       "Sample:                             0   HQIC                          1850.020\n",
       "                                - 563                                         \n",
       "Covariance Type:                  opg                                         \n",
@@ -592,7 +592,7 @@
       "Dep. Variable:           stoch_USDCAD   No. Observations:                  563\n",
       "Model:                 ARIMA(2, 0, 0)   Log Likelihood                -898.321\n",
       "Date:                Sun, 12 Feb 2023   AIC                           1804.642\n",
-      "Time:                        13:55:11   BIC                           1821.976\n",
+      "Time:                        15:59:41   BIC                           1821.976\n",
       "Sample:                             0   HQIC                          1811.409\n",
       "                                - 563                                         \n",
       "Covariance Type:                  opg                                         \n",
@@ -619,7 +619,7 @@
       "Dep. Variable:           stoch_USDCAD   No. Observations:                  563\n",
       "Model:                 ARIMA(3, 0, 0)   Log Likelihood                -894.764\n",
       "Date:                Sun, 12 Feb 2023   AIC                           1799.528\n",
-      "Time:                        13:55:11   BIC                           1821.194\n",
+      "Time:                        15:59:41   BIC                           1821.194\n",
       "Sample:                             0   HQIC                          1807.986\n",
       "                                - 563                                         \n",
       "Covariance Type:                  opg                                         \n",
@@ -647,7 +647,7 @@
       "Dep. Variable:           stoch_USDCAD   No. Observations:                  563\n",
       "Model:                 ARIMA(4, 0, 0)   Log Likelihood                -891.030\n",
       "Date:                Sun, 12 Feb 2023   AIC                           1794.060\n",
-      "Time:                        13:55:12   BIC                           1820.060\n",
+      "Time:                        15:59:42   BIC                           1820.060\n",
       "Sample:                             0   HQIC                          1804.210\n",
       "                                - 563                                         \n",
       "Covariance Type:                  opg                                         \n",
@@ -676,7 +676,7 @@
       "Dep. Variable:           stoch_USDCAD   No. Observations:                  563\n",
       "Model:                 ARIMA(1, 0, 1)   Log Likelihood                -906.890\n",
       "Date:                Sun, 12 Feb 2023   AIC                           1821.779\n",
-      "Time:                        13:55:12   BIC                           1839.113\n",
+      "Time:                        15:59:42   BIC                           1839.113\n",
       "Sample:                             0   HQIC                          1828.546\n",
       "                                - 563                                         \n",
       "Covariance Type:                  opg                                         \n",
@@ -703,7 +703,7 @@
       "Dep. Variable:           stoch_USDCAD   No. Observations:                  563\n",
       "Model:                 ARIMA(2, 0, 2)   Log Likelihood                -892.400\n",
       "Date:                Sun, 12 Feb 2023   AIC                           1796.799\n",
-      "Time:                        13:55:12   BIC                           1822.799\n",
+      "Time:                        15:59:42   BIC                           1822.799\n",
       "Sample:                             0   HQIC                          1806.949\n",
       "                                - 563                                         \n",
       "Covariance Type:                  opg                                         \n",
@@ -732,7 +732,7 @@
       "Dep. Variable:           stoch_USDCAD   No. Observations:                  563\n",
       "Model:                 ARIMA(3, 0, 3)   Log Likelihood                -891.399\n",
       "Date:                Sun, 12 Feb 2023   AIC                           1798.798\n",
-      "Time:                        13:55:13   BIC                           1833.464\n",
+      "Time:                        15:59:43   BIC                           1833.464\n",
       "Sample:                             0   HQIC                          1812.331\n",
       "                                - 563                                         \n",
       "Covariance Type:                  opg                                         \n",
@@ -763,7 +763,7 @@
       "Dep. Variable:           stoch_USDCAD   No. Observations:                  563\n",
       "Model:                 ARIMA(4, 0, 4)   Log Likelihood                -890.159\n",
       "Date:                Sun, 12 Feb 2023   AIC                           1800.319\n",
-      "Time:                        13:55:15   BIC                           1843.652\n",
+      "Time:                        15:59:44   BIC                           1843.652\n",
       "Sample:                             0   HQIC                          1817.235\n",
       "                                - 563                                         \n",
       "Covariance Type:                  opg                                         \n",
@@ -802,7 +802,6 @@
     "    model = ARIMA(df[\"stoch_USDCAD\"].dropna(), order=order)\n",
     "    results = model.fit()\n",
     "    print(results.summary())\n",
-    "\n",
     "    arma_models[f\"ARMA({order[0][-1]},{order[2][-1]})\"] = results\n"
    ],
    "metadata": {
@@ -811,10 +810,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "          is_stationary\nARMA(1,0)         False\nARMA(2,0)         False\nARMA(3,0)         False\nARMA(4,0)         False\nARMA(1,1)         False\nARMA(2,2)         False\nARMA(3,3)         False\nARMA(4,4)         False",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>is_stationary</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>ARMA(1,0)</th>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>ARMA(2,0)</th>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>ARMA(3,0)</th>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>ARMA(4,0)</th>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>ARMA(1,1)</th>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>ARMA(2,2)</th>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>ARMA(3,3)</th>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>ARMA(4,4)</th>\n      <td>False</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_stationarity = pd.DataFrame(index=arma_models.keys(), columns=[\"is_stationary\"])\n",
+    "for model_name, model in arma_models.items():\n",
+    "    df_stationarity.loc[model_name, \"is_stationary\"] = check_stationarity(model)\n",
+    "df_stationarity"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "outputs": [],
    "source": [
-    "def compute_lr_statistic(reduced_ll: float, full_ll: float) -> float:\n",
+    " def compute_lr_statistic(reduced_ll: float, full_ll: float) -> float:\n",
     "    return -2 * (reduced_ll - full_ll)"
    ],
    "metadata": {
@@ -823,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "outputs": [],
    "source": [
     "def compute_p_value_llr(reduced_ll: float, full_ll: float, df: int = 1) -> float:\n",
@@ -837,19 +860,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "outputs": [
     {
      "data": {
       "text/plain": "array([-1.27044227-0.j        ,  0.58783978-0.83721156j,\n        0.58783978+0.83721156j,  1.83290223-0.j        ])"
      },
-     "execution_count": 30,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "arma_models[\"ARMA(4,4)\"].arroots\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "False"
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "check_stationarity(arma_models[\"ARMA(4,4)\"])"
    ],
    "metadata": {
     "collapsed": false
@@ -868,13 +911,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "outputs": [
     {
      "data": {
       "text/plain": "0.28949106543462216"
      },
-     "execution_count": 31,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -890,6 +933,231 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "Comme la p-value n'est pas inférieure au seuil significatif de 5%, nous ne pouvons pas rejeter l'hypothèse nulle. On peut donc conclure que le modèle ARMA(3,3) fit aussi bien les données que le modèle ARMA(4,4)."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "- H0: Le modèle complet ARMA(3,3) fit les données aussi bien que le modèle réduit ARMA(2,2). Par conséquent, on devrait choisir le modèle ARMA(2,2) car il est plus simple.\n",
+    "- H1: Le modèle complet ARMA(3,3) fit mieux les données que le modèle réduit ARMA(2,2). Par conséquent, on devrait choisir le modèle ARMA(3,3) car il est plus précis."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.3676921427657294"
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compute_p_value_llr(arma_models[\"ARMA(2,2)\"].llf,\n",
+    "                    arma_models[\"ARMA(3,3)\"].llf,\n",
+    "                    df=2)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Comme la p-value n'est pas inférieure au seuil significatif de 5%, nous ne pouvons pas rejeter l'hypothèse nulle. On peut donc conclure que le modèle ARMA(2,2) fit aussi bien les données que le modèle ARMA(3,3)."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "- H0: Le modèle complet ARMA(2,2) fit les données aussi bien que le modèle réduit ARMA(1,1). Par conséquent, on devrait choisir le modèle ARMA(1,1) car il est plus simple.\n",
+    "- H1: Le modèle complet ARMA(2,2) fit mieux les données que le modèle réduit ARMA(1,1). Par conséquent, on devrait choisir le modèle ARMA(2,2) car il est plus précis."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "5.093383915441103e-07"
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compute_p_value_llr(arma_models[\"ARMA(1,1)\"].llf,\n",
+    "                    arma_models[\"ARMA(2,2)\"].llf,\n",
+    "                    df=2)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "On remarque que la p-value est inférieure au seuil significatif de 5%. On peut donc rejeter l'hypothèse nulle. On peut donc conclure que le modèle ARMA(2,2) fit mieux les données que le modèle ARMA(1,1)."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "On effectue le même raisonnement avec les modèles AR :"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "- H0: Le modèle complet AR(4) fit les données aussi bien que le modèle réduit AR(3). Par conséquent, on devrait choisir le modèle AR(3) car il est plus simple.\n",
+    "- H1: Le modèle complet AR(4) fit mieux les données que le modèle réduit AR(3). Par conséquent, on devrait choisir le modèle AR(4) car il est plus précis."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.006280983257624901"
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compute_p_value_llr(arma_models[\"ARMA(3,0)\"].llf,\n",
+    "                    arma_models[\"ARMA(4,0)\"].llf,\n",
+    "                    df=1)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "On remarque que la p-value est inférieure au seuil significatif de 5%. On peut donc rejeter l'hypothèse nulle. On peut donc conclure que le modèle AR(4) fit mieux les données que le modèle AR(3)."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "- H0: Le modèle complet AR(4) fit les données aussi bien que le modèle réduit AR(2). Par conséquent, on devrait choisir le modèle AR(2) car il est plus simple.\n",
+    "- H1: Le modèle complet AR(4) fit mieux les données que le modèle réduit AR(2). Par conséquent, on devrait choisir le modèle AR(4) car il est plus précis."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.0006815655368223662"
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compute_p_value_llr(arma_models[\"ARMA(2,0)\"].llf,\n",
+    "                    arma_models[\"ARMA(4,0)\"].llf,\n",
+    "                    df=2)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "On remarque que la p-value est inférieure au seuil significatif de 5%. On peut donc rejeter l'hypothèse nulle. On peut donc conclure que le modèle AR(4) fit mieux les données que le modèle AR(2)."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "- H0: Le modèle complet AR(4) fit les données aussi bien que le modèle réduit AR(1). Par conséquent, on devrait choisir le modèle AR(1) car il est plus simple.\n",
+    "- H1: Le modèle complet AR(4) fit mieux les données que le modèle réduit AR(1). Par conséquent, on devrait choisir le modèle AR(4) car il est plus précis."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "2.7200521206435115e-12"
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compute_p_value_llr(arma_models[\"ARMA(1,0)\"].llf,\n",
+    "                    arma_models[\"ARMA(4,0)\"].llf,\n",
+    "                    df=3)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "On remarque que la p-value est inférieure au seuil significatif de 5%. On peut donc rejeter l'hypothèse nulle. On peut donc conclure que le modèle AR(4) fit mieux les données que le modèle AR(1)."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false
@@ -897,27 +1165,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-1.27044227-0.j          0.58783978-0.83721156j  0.58783978+0.83721156j\n",
-      "  1.83290223-0.j        ]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(arma_models[\"ARMA(4,4)\"].arroots)"
-   ],
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
