--- a/tp1.ipynb
+++ b/tp1.ipynb
@@ -1025,6 +1025,15 @@
   {
    "cell_type": "markdown",
    "source": [
+    "**On peut donc conclure que d'après le test du ratio de vraisemblance, le modèle ARMA(2,2) est le meilleur modèle pour modéliser les données parmis les modèles ARMA.**"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "On effectue le même raisonnement avec les modèles AR :"
    ],
    "metadata": {
@@ -1155,19 +1164,63 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "cell_type": "markdown",
+   "source": [
+    "**On peut donc conclure que d'après le test du ratio de vraisemblance, le modèle AR(4) est le meilleur modèle pour modéliser les données parmis les modèles AR.**"
+   ],
    "metadata": {
     "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 45,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(1822.7987872439364, 1820.0598903433222)"
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# BIC test between AR(4) and ARMA(2,2)\n",
+    "arma_models[\"ARMA(2,2)\"].bic, arma_models[\"ARMA(4,0)\"].bic"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                   BIC\nARMA(2,2)  1822.798787\nAR(4)      1820.059890",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>BIC</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>ARMA(2,2)</th>\n      <td>1822.798787</td>\n    </tr>\n    <tr>\n      <th>AR(4)</th>\n      <td>1820.059890</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_bic = pd.DataFrame({\"BIC\": [arma_models[\"ARMA(2,2)\"].bic, arma_models[\"ARMA(4,0)\"].bic]},\n",
+    "                      index=[\"ARMA(2,2)\", \"AR(4)\"])\n",
+    "df_bic"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "On remarque que le BIC du modèle AR(4) est plus petit que celui du modèle ARMA(2,2). Par conséquent, et d'après le critère d'information de Bayes, le modèle AR(4) est le meilleur modèle pour modéliser les données."
+   ],
    "metadata": {
     "collapsed": false
    }
