--- a/tp1.ipynb
+++ b/tp1.ipynb
@@ -614,12 +614,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 143,
    "outputs": [],
    "source": [
-    "def check_stationarity(arma_model: ARIMAResultsWrapper) -> bool:\n",
-    "    arroots = arma_model.arroots\n",
-    "    return np.all(np.sqrt(arroots.real + arroots.imag) < 1)"
+    "def compute_eigenvalues(arma_model: ARIMAResultsWrapper) -> np.ndarray:\n",
+    "    \"\"\"Compute the eigenvalues of the ARMA model.\"\"\"\n",
+    "\n",
+    "    arparams = arma_model.arparams # store the AR parameters\n",
+    "    if len(arparams) == 1: # if there is only one AR parameter (True for AR(1) model)\n",
+    "        eigmat = np.array([[arparams[0]]])\n",
+    "    elif len(arparams) == 2:\n",
+    "        eigmat = np.array([[arparams[0], arparams[1]],\n",
+    "                           [1, 0]])\n",
+    "    elif len(arparams) == 3:\n",
+    "        eigmat = np.array([[arparams[0], arparams[1], arparams[2]],\n",
+    "                           [1, 0, 0],\n",
+    "                           [0, 1, 0]])\n",
+    "    elif len(arparams) == 4:\n",
+    "        eigmat = np.array([[arparams[0], arparams[1], arparams[2], arparams[3]],\n",
+    "                           [1, 0, 0, 0],\n",
+    "                           [0, 1, 0, 0],\n",
+    "                           [0, 0, 1, 0]])\n",
+    "    else:\n",
+    "        raise ValueError(\"The number of AR parameters must be between 1 and 4\")\n",
+    "\n",
+    "    return np.linalg.eigvals(eigmat) # compute the eigenvalues of the matrix"
    ],
    "metadata": {
     "collapsed": false
@@ -627,7 +646,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 144,
+   "outputs": [],
+   "source": [
+    "def check_stationarity(eigenvalues: np.ndarray) -> bool:\n",
+    "    return all(np.abs(eigenvalues) < 1)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
    "outputs": [],
    "source": [
     "order_list = [([1], 0, [0]),\n",
@@ -645,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 113,
    "outputs": [
     {
      "name": "stdout",
@@ -658,7 +689,7 @@
       "Dep. Variable:           stoch_USDCAD   No. Observations:                  563\n",
       "Model:                 ARIMA(1, 0, 0)   Log Likelihood                -919.472\n",
       "Date:                Sat, 25 Feb 2023   AIC                           1844.945\n",
-      "Time:                        09:30:55   BIC                           1857.945\n",
+      "Time:                        10:20:24   BIC                           1857.945\n",
       "Sample:                             0   HQIC                          1850.020\n",
       "                                - 563                                         \n",
       "Covariance Type:                  opg                                         \n",
@@ -684,7 +715,7 @@
       "Dep. Variable:           stoch_USDCAD   No. Observations:                  563\n",
       "Model:                 ARIMA(2, 0, 0)   Log Likelihood                -898.321\n",
       "Date:                Sat, 25 Feb 2023   AIC                           1804.642\n",
-      "Time:                        09:30:55   BIC                           1821.976\n",
+      "Time:                        10:20:24   BIC                           1821.976\n",
       "Sample:                             0   HQIC                          1811.409\n",
       "                                - 563                                         \n",
       "Covariance Type:                  opg                                         \n",
@@ -711,7 +742,7 @@
       "Dep. Variable:           stoch_USDCAD   No. Observations:                  563\n",
       "Model:                 ARIMA(3, 0, 0)   Log Likelihood                -894.764\n",
       "Date:                Sat, 25 Feb 2023   AIC                           1799.528\n",
-      "Time:                        09:30:55   BIC                           1821.194\n",
+      "Time:                        10:20:24   BIC                           1821.194\n",
       "Sample:                             0   HQIC                          1807.986\n",
       "                                - 563                                         \n",
       "Covariance Type:                  opg                                         \n",
@@ -739,7 +770,7 @@
       "Dep. Variable:           stoch_USDCAD   No. Observations:                  563\n",
       "Model:                 ARIMA(4, 0, 0)   Log Likelihood                -891.030\n",
       "Date:                Sat, 25 Feb 2023   AIC                           1794.060\n",
-      "Time:                        09:30:56   BIC                           1820.060\n",
+      "Time:                        10:20:24   BIC                           1820.060\n",
       "Sample:                             0   HQIC                          1804.210\n",
       "                                - 563                                         \n",
       "Covariance Type:                  opg                                         \n",
@@ -768,7 +799,7 @@
       "Dep. Variable:           stoch_USDCAD   No. Observations:                  563\n",
       "Model:                 ARIMA(1, 0, 1)   Log Likelihood                -906.890\n",
       "Date:                Sat, 25 Feb 2023   AIC                           1821.779\n",
-      "Time:                        09:30:56   BIC                           1839.113\n",
+      "Time:                        10:20:25   BIC                           1839.113\n",
       "Sample:                             0   HQIC                          1828.546\n",
       "                                - 563                                         \n",
       "Covariance Type:                  opg                                         \n",
@@ -795,7 +826,7 @@
       "Dep. Variable:           stoch_USDCAD   No. Observations:                  563\n",
       "Model:                 ARIMA(2, 0, 2)   Log Likelihood                -892.400\n",
       "Date:                Sat, 25 Feb 2023   AIC                           1796.799\n",
-      "Time:                        09:30:56   BIC                           1822.799\n",
+      "Time:                        10:20:25   BIC                           1822.799\n",
       "Sample:                             0   HQIC                          1806.949\n",
       "                                - 563                                         \n",
       "Covariance Type:                  opg                                         \n",
@@ -824,7 +855,7 @@
       "Dep. Variable:           stoch_USDCAD   No. Observations:                  563\n",
       "Model:                 ARIMA(3, 0, 3)   Log Likelihood                -891.399\n",
       "Date:                Sat, 25 Feb 2023   AIC                           1798.798\n",
-      "Time:                        09:30:57   BIC                           1833.464\n",
+      "Time:                        10:20:26   BIC                           1833.464\n",
       "Sample:                             0   HQIC                          1812.331\n",
       "                                - 563                                         \n",
       "Covariance Type:                  opg                                         \n",
@@ -855,7 +886,7 @@
       "Dep. Variable:           stoch_USDCAD   No. Observations:                  563\n",
       "Model:                 ARIMA(4, 0, 4)   Log Likelihood                -890.159\n",
       "Date:                Sat, 25 Feb 2023   AIC                           1800.319\n",
-      "Time:                        09:30:59   BIC                           1843.652\n",
+      "Time:                        10:20:28   BIC                           1843.652\n",
       "Sample:                             0   HQIC                          1817.235\n",
       "                                - 563                                         \n",
       "Covariance Type:                  opg                                         \n",
@@ -902,14 +933,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 146,
    "outputs": [
     {
      "data": {
-      "text/plain": "          is_stationary\nARMA(1,0)         False\nARMA(2,0)         False\nARMA(3,0)         False\nARMA(4,0)         False\nARMA(1,1)         False\nARMA(2,2)         False\nARMA(3,3)         False\nARMA(4,4)         False",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>is_stationary</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>ARMA(1,0)</th>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>ARMA(2,0)</th>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>ARMA(3,0)</th>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>ARMA(4,0)</th>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>ARMA(1,1)</th>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>ARMA(2,2)</th>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>ARMA(3,3)</th>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>ARMA(4,4)</th>\n      <td>False</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "array([0.72848943])"
      },
-     "execution_count": 86,
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compute_eigenvalues(arma_models[\"ARMA(1,1)\"])"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([0.72848943])"
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arma_models[\"ARMA(1,1)\"].arparams"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "          is_stationary\nARMA(1,0)          True\nARMA(2,0)          True\nARMA(3,0)          True\nARMA(4,0)          True\nARMA(1,1)          True\nARMA(2,2)          True\nARMA(3,3)          True\nARMA(4,4)          True",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>is_stationary</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>ARMA(1,0)</th>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>ARMA(2,0)</th>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>ARMA(3,0)</th>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>ARMA(4,0)</th>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>ARMA(1,1)</th>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>ARMA(2,2)</th>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>ARMA(3,3)</th>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>ARMA(4,4)</th>\n      <td>True</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -917,7 +988,8 @@
    "source": [
     "df_stationarity = pd.DataFrame(index=arma_models.keys(), columns=[\"is_stationary\"])\n",
     "for model_name, model in arma_models.items():\n",
-    "    df_stationarity.loc[model_name, \"is_stationary\"] = check_stationarity(model)\n",
+    "    eigenvalues = compute_eigenvalues(model)\n",
+    "    df_stationarity.loc[model_name, \"is_stationary\"] = check_stationarity(eigenvalues)\n",
     "df_stationarity"
    ],
    "metadata": {
@@ -929,7 +1001,7 @@
    "execution_count": 87,
    "outputs": [],
    "source": [
-    " def compute_lr_statistic(reduced_ll: float, full_ll: float) -> float:\n",
+    "def compute_lr_statistic(reduced_ll: float, full_ll: float) -> float:\n",
     "    return -2 * (reduced_ll - full_ll)"
    ],
    "metadata": {
