--- a/tp1.ipynb
+++ b/tp1.ipynb
@@ -8,6 +8,8 @@
    },
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "from utils import *\n",
     "# Deactivate warnings\n",
     "import warnings\n",
@@ -646,11 +648,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 158,
    "outputs": [],
    "source": [
     "def check_stationarity(eigenvalues: np.ndarray) -> bool:\n",
-    "    return all(np.abs(eigenvalues) < 1)"
+    "    \"\"\"Check if the eigenvalues of the ARMA model are inferior to 1.\"\"\"\n",
+    "    if eigenvalues.dtype == np.complex128:\n",
+    "        return all(np.sqrt(np.real(eigenvalues)**2 + np.imag(eigenvalues)**2) < 1)\n",
+    "    else:\n",
+    "        return all(np.abs(eigenvalues) < 1)"
    ],
    "metadata": {
     "collapsed": false
